--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start-dev": "ng serve --port 4201",
     "build": "ng build",
+    "build-p": "ng build --prod",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "deploy-github": "ng deploy --base-href=https://juancamilodevfrontback.github.io/my-bank/"
